--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
                 <div class="navbar-header">
 
-                    <a class="site-title"><span>World of </span> Aswanth </a>
+                    <a class="site-title"><span>Aswanth </span> DS </a>
 
                 </div>
                 <!-- /.navbar-header -->
@@ -88,7 +88,84 @@
     </div>
     <!-- /.hero -->
 
-    <main>
+    <main id="main" class="site-section">
+
+<div class="section-contact-us">
+    <h2> Contact ME </h2>
+    <h5> Have a cup of tea guys </h5>
+
+        <section class="w3l-contacts-12" id="contact">
+            <div class="contact-top pt-8">
+                <div class="container py-md-3">
+
+                    <div class="row cont-main-top">
+                        <!-- contact form -->
+                        <div class="contacts12-main col-lg-6 ">
+
+                            <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="main-input">
+                                <div class="top-inputs d-grid">
+                                    <input type="text" placeholder="Name" name="w3lName" id="w3lName" required="">
+
+                                </div>
+                                <input type="email" name="email" placeholder="Email" id="w3lSender" required="">
+
+                                <textarea placeholder="Message" name="w3lMessage" id="w3lMessage"
+                                    required=""></textarea>
+                                <div class="text-right">
+                                    <button type="submit" class="btn btn-theme2">Submit Now</button>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- //contact form -->
+                        <!-- contact address -->
+                        <div class="contact col-lg-6 mt-lg-0 mt-5">
+                            <div class="cont-subs">
+                                <div class="cont-add">
+                                    <div class="cont-add-lft">
+                                        <img src="assets/img/fb-icon_bl.svg" style="height: 20px;width: 20px;"></img>
+                                    </div>
+                                    <div class="cont-add-rgt">
+                                        <a href="https://www.facebook.com/aswanth.ds.980/">
+                                            <p class="contact-text-sub">Aswanth DS Venjaramood</p>
+                                        </a>
+
+                                    </div>
+
+                                </div>
+                                <div class="cont-add add-2">
+                                    <div class="cont-add-lft">
+                                        <img src="assets/img/icons8-email-open-50.png"
+                                            style="height: 20px;width: 20px;"></img>
+                                    </div>
+                                    <div class="cont-add-rgt">
+                                        <a href="mailto:worldofaswanth@gmail.com">
+                                            <p class="contact-text-sub">Gmail</p>
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <div class="cont-add">
+                                    <div class="cont-add-lft">
+                                        <img src="assets/img/icons8-instagram-24.png"
+                                            style="height: 20px;width: 20px;"></img>
+                                    </div>
+                                    <div class="cont-add-rgt">
+                                        <a href="https://www.instagram.com/itz__aswanthdsvjmd">
+                                            <p class="contact-text-sub">Instagram </p>
+                                        </a>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- //contact address -->
+
+                </div>
+            </div>
+
+        </div>
 
 
 
@@ -100,7 +177,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a class="site-title"><span>World</span>Of Aswanth</a>
+                    <a class="site-title"><span>Aswanth </span> DS </a>
                     <p>I am a small Youtuber and a student. This is a personal Website Made by Me.</p>
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
