--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <div class="navbar-header">
 
-                    <a class="site-title"><span>World of </span> Aswanth </a>
+                    <a class="site-title"><span>Aswanth </span> DS </a>
 
                 </div>
                 <!-- /.navbar-header -->
@@ -98,8 +98,8 @@
                 <div class="row">
                     <div class="col-sm-5">
                         <h2>About Me</h2>
-                        <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber
-                            and aim for to become a software engineer. </p>
+                        <p> I'm Aswanth Ds .Welcome to my  world .I am a student,new Youtuber
+                            and aim for to become a software developer. </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
                         <img src="assets/img/apple-touch-icon.png" alt="Owner Picture">
@@ -197,7 +197,7 @@
             <div class="container">
                 <h2>Subscribe to my Youtube Channel </h2>
                 <form class="form-group newsletter-group">
-                    <input type="url" class="form-control" placeholder="World of Aswanth @ youtube . com" disabled>
+                    <input type="url" class="form-control" placeholder="Aswanth DS  @ youtube.com" disabled>
 
                     <a class="btn btn-red"
                         href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1"
@@ -214,7 +214,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a class="site-title"><span>World</span>Of Aswanth</a>
+                    <a class="site-title"><span>Aswanth</span> DS</a>
                     <p>I am a small Youtuber and a student. This is a personal Website Made by Me.</p>
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
