--- a/youtube-sec.html
+++ b/youtube-sec.html
@@ -52,7 +52,7 @@
 
                 <div class="navbar-header">
 
-                    <a class="site-title"><span>World of </span> Aswanth </a>
+                    <a class="site-title"><span>Aswanth </span> DS  </a>
 
                 </div>
                 <!-- /.navbar-header -->
@@ -222,7 +222,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a class="site-title"><span>World</span>Of Aswanth</a>
+                    <a class="site-title"><span>Aswanth </span> DS </a>
                     <p>I am a small Youtuber and a student. This is a personal Website Made by Me.</p>
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
