--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         <!-- contact form -->
                         <div class="contacts12-main col-lg-6 ">
 
-                            <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="main-input">
+                            <form  method="post" class="main-input">
                                 <div class="top-inputs d-grid">
                                     <input type="text" placeholder="Name" name="w3lName" id="w3lName" required="">
 
