--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
                         <p> I'm Aswanth Ds .Welcome to my world .I am a student,new Youtuber
                             and aim for to become a software developer. This is a personal Website to let you know about
                             me and my
-                            works in youtube and programming field. </p>
-
-                        <p> I'm Aswanth Ds .Welcome to my  world .I am a student,new Youtuber
-                            and aim for to become a software developer. </p>
+                            works in youtube and programming field. This is the platform for you to understand about me
+                        .  </p>
 
                     </div>
                     <div class="col-sm-7 hidden-xs">
