--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
                     <a class="site-title"><span>Aswanth </span> DS </a>
-<<<<<<< HEAD
+
                     <p>I am a small Youtuber and a student. This is a personal Website to let you know about me and my
                         works in youtube and programming field.<br> This is the platform for you to understand about me
                         . </p> <br>
@@ -189,9 +189,9 @@
                         Kindly u can enquire about me via
                         Instagram,Facebook,Twitter Lister on web footer and on Contact page.
                     </p>
-=======
-                    <p>I am a small Youtuber and a student. This is a personal Website Made by Me.</p>
->>>>>>> 7b42ffe7d8b0a50f2f87add89ea37620efc432e5
+
+                   
+
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
                     <h3>Keep in touch</h3>
@@ -240,7 +240,7 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p> Redesigned by worldofaswanth</p>
+                            <p> Redesigned by Aswanth</p>
 
                         </div>
                     </div>
