--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+
+
     <title>Contact | Aswanth Ds</title>
 
     <meta name="description" content="">
@@ -90,85 +92,84 @@
 
     <main id="main" class="site-section">
 
+        <div class="section-contact-us">
+            <h2> Contact ME </h2>
+            <h5> Have a cup of tea guys </h5>
 
-        
-<div class="section-contact-us">
-    <h2> Contact ME </h2>
-    <h5> Have a cup of tea guys </h5>
+            <section class="w3l-contacts-12" id="contact">
+                <div class="contact-top pt-8">
+                    <div class="container py-md-3">
 
-        <section class="w3l-contacts-12" id="contact">
-            <div class="contact-top pt-8">
-                <div class="container py-md-3">
+                        <div class="row cont-main-top">
+                            <!-- contact form -->
+                            <div class="contacts12-main col-lg-6 ">
 
-                    <div class="row cont-main-top">
-                        <!-- contact form -->
-                        <div class="contacts12-main col-lg-6 ">
+                                <form id="gform" class="main-input" method="post"
+                                    action="https://script.google.com/macros/s/AKfycbw4M-ASwUaYpxdRIu36lBa1KN_xnH72l-4zKszbSaDMGKr333Eo/exec">
+                                    <div class="top-inputs d-grid">
+                                        <input type="text" placeholder="Name" name="w3lName" id="w3lName" required="">
 
-                            <form  method="post" class="main-input">
-                                <div class="top-inputs d-grid">
-                                    <input type="text" placeholder="Name" name="w3lName" id="w3lName" required="">
+                                    </div>
+                                    <input type="email" name="email" placeholder="Email" id="w3lSender" required="">
+
+                                    <textarea placeholder="Message" name="w3lMessage" id="w3lMessage"
+                                        required=""></textarea>
+                                    <div class="text-right">
+                                        <button type="submit" class="btn btn-theme2">Submit Now</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <!-- //contact form -->
+                            <!-- contact address -->
+                            <div class="contact col-lg-6 mt-lg-0 mt-5">
+                                <div class="cont-subs">
+                                    <div class="cont-add">
+                                        <div class="cont-add-lft">
+                                            <img src="assets/img/fb-icon_bl.svg"
+                                                style="height: 20px;width: 20px;"></img>
+                                        </div>
+                                        <div class="cont-add-rgt">
+                                            <a href="https://www.facebook.com/aswanth.ds.980/">
+                                                <p class="contact-text-sub">Aswanth DS Venjaramood</p>
+                                            </a>
+
+                                        </div>
+
+                                    </div>
+                                    <div class="cont-add add-2">
+                                        <div class="cont-add-lft">
+                                            <img src="assets/img/icons8-email-open-50.png"
+                                                style="height: 20px;width: 20px;"></img>
+                                        </div>
+                                        <div class="cont-add-rgt">
+                                            <a href="mailto:worldofaswanth@gmail.com">
+                                                <p class="contact-text-sub">Gmail</p>
+                                            </a>
+                                        </div>
+
+                                    </div>
+                                    <div class="cont-add">
+                                        <div class="cont-add-lft">
+                                            <img src="assets/img/icons8-instagram-24.png"
+                                                style="height: 20px;width: 20px;"></img>
+                                        </div>
+                                        <div class="cont-add-rgt">
+                                            <a href="https://www.instagram.com/itz__aswanthdsvjmd">
+                                                <p class="contact-text-sub">Instagram </p>
+                                            </a>
+                                        </div>
+                                    </div>
+
 
                                 </div>
-                                <input type="email" name="email" placeholder="Email" id="w3lSender" required="">
-
-                                <textarea placeholder="Message" name="w3lMessage" id="w3lMessage"
-                                    required=""></textarea>
-                                <div class="text-right">
-                                    <button type="submit" class="btn btn-theme2">Submit Now</button>
-                                </div>
-                            </form>
-                        </div>
-                        <!-- //contact form -->
-                        <!-- contact address -->
-                        <div class="contact col-lg-6 mt-lg-0 mt-5">
-                            <div class="cont-subs">
-                                <div class="cont-add">
-                                    <div class="cont-add-lft">
-                                        <img src="assets/img/fb-icon_bl.svg" style="height: 20px;width: 20px;"></img>
-                                    </div>
-                                    <div class="cont-add-rgt">
-                                        <a href="https://www.facebook.com/aswanth.ds.980/">
-                                            <p class="contact-text-sub">Aswanth DS Venjaramood</p>
-                                        </a>
-
-                                    </div>
-
-                                </div>
-                                <div class="cont-add add-2">
-                                    <div class="cont-add-lft">
-                                        <img src="assets/img/icons8-email-open-50.png"
-                                            style="height: 20px;width: 20px;"></img>
-                                    </div>
-                                    <div class="cont-add-rgt">
-                                        <a href="mailto:worldofaswanth@gmail.com">
-                                            <p class="contact-text-sub">Gmail</p>
-                                        </a>
-                                    </div>
-
-                                </div>
-                                <div class="cont-add">
-                                    <div class="cont-add-lft">
-                                        <img src="assets/img/icons8-instagram-24.png"
-                                            style="height: 20px;width: 20px;"></img>
-                                    </div>
-                                    <div class="cont-add-rgt">
-                                        <a href="https://www.instagram.com/itz__aswanthdsvjmd">
-                                            <p class="contact-text-sub">Instagram </p>
-                                        </a>
-                                    </div>
-                                </div>
-
-
                             </div>
                         </div>
+                        <!-- //contact address -->
+
                     </div>
-                    <!-- //contact address -->
-
                 </div>
-            </div>
 
 
-        </div>
 
 
 
@@ -181,8 +182,8 @@
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
                     <a class="site-title"><span>Aswanth </span> DS </a>
-
-                    <p>I am a small Youtuber and a student. This is a personal Website to let you know about me and my
+                    <p>I am a small Youtuber and a student. This is a personal Website to let you know
+                        about me and my
                         works in youtube and programming field.<br> This is the platform for you to understand about me
                         . </p> <br>
                     <p class="p_about-me">
@@ -190,7 +191,7 @@
                         Instagram,Facebook,Twitter Lister on web footer and on Contact page.
                     </p>
 
-                   
+
 
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
@@ -240,7 +241,7 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p> Redesigned by Aswanth</p>
+                            <p> Redesigned by worldofaswanth</p>
 
                         </div>
                     </div>
@@ -249,6 +250,31 @@
         </div>
         <!-- /.copyright -->
     </footer>
+
+
+    <button onclick="topFunction()" id="movetop" title="Go to top">
+        <span class="fa fa-angle-up"></span>
+    </button>
+    <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("movetop").style.display = "block";
+            } else {
+                document.getElementById("movetop").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
 
 
     <!-- Bootstrap core JavaScript
@@ -261,6 +287,8 @@
     <script src="assets/js/jquery.countTo.min.js"></script>
     <script src="assets/js/jquery.shuffle.min.js"></script>
     <script src="assets/js/script.js"></script>
+
+
 
 
 </body>
