--- a/contact.html
+++ b/contact.html
@@ -102,18 +102,16 @@
 
                         <div class="row cont-main-top">
                             <!-- contact form -->
-                            <div class="contacts12-main col-lg-6 ">
+                            <div class="main-input">
 
-                                <form id="gform" class="main-input" method="post"
-                                    action="https://script.google.com/macros/s/AKfycbw4M-ASwUaYpxdRIu36lBa1KN_xnH72l-4zKszbSaDMGKr333Eo/exec">
+                                <form class="main-input" method="post">
                                     <div class="top-inputs d-grid">
-                                        <input type="text" placeholder="Name" name="w3lName" id="w3lName" required="">
+                                        <input type="text" placeholder="Name" name="w3lName" id="Name" required="">
 
                                     </div>
                                     <input type="email" name="email" placeholder="Email" id="w3lSender" required="">
 
-                                    <textarea placeholder="Message" name="w3lMessage" id="w3lMessage"
-                                        required=""></textarea>
+                                    <textarea placeholder="Message" name="Message" id="Message" required=""></textarea>
                                     <div class="text-right">
                                         <button type="submit" class="btn btn-theme2">Submit Now</button>
                                     </div>
