--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 
                         <div class="row cont-main-top">
                             <!-- contact form -->
-                            <div class="main-input">
+                            <div class="main-input col lg-6">
 
                                 <form class="main-input" method="post">
                                     <div class="top-inputs d-grid">
