--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                             <!-- contact form -->
                             <div class="main-input col-lg-6">
 
-                                <form class="main-input" method="post" action="" >
+                                <form class="main-input"  >
                                     <div class="top-inputs d-grid">
                                         <input type="text" placeholder="Name" name="w3lName" id="Name" required="">
 
