--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>World of Aswanth </title>
+    <title>Aswanth DS </title>
 
     <meta name="description" content="">
     <meta name="author" content="">
